Fix sort-dropdown overlapped by list items
- using 'transform' to center the sort content
  creates a new stacking context. Flex is now used
  instead.

--- a/pub/static/themes/whitelabel/views/default/mixins/_listitems-controls.scss
+++ b/pub/static/themes/whitelabel/views/default/mixins/_listitems-controls.scss
@@ -29,13 +29,10 @@
             padding-left: 0.5em;
         }
 
-        .sort__control {
-            // vertical align
-            @include media-query(lap) {
-                position: relative;
-                top: 50%;
-                transform: translateY(-50%);
-            }
+        // vertical align .sort__control
+        .sort__content {
+            display: flex;
+            align-items: center;
         }
 
         .pager__description {
